# passage

./: COPYRIGHT  LICENSE  README  Setup.hs  passage.cabal  stack.yaml
Language/: Passage.hs
Language/Passage/: AST.hs  Distribution.hs  Graph.hs  Graph2C.hs  GraphColor.hs  SimulatorConf.hs  SliceSample.hs  SliceSampleMWC.hs  Term.hs  UI.hs  Utils.hs
Language/Passage/Lang/: C.hs  LaTeX.hs
app/: Main.hs
cbits/runtime/: Makefile
cbits/runtime/src/: Makefile  generic_slicers.c  kiss.h  mt19937ar.h  passage.c  passage.h
cbits/runtime/src/templates/: finiteMetropolis.c  metropolis_posreal.c  slice.c
